fixed the carousel just need to add some more styling to it to make it look better and not as out of place

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,12 @@ body {
     color: #0000FF;
 }
 
+.poster {
+    width: 800px;
+    height: 400px;
+    object-fit: contain;
+}
+
 footer {
     background-color: #708090;
 }
